// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FULL App unit test at coins page, if the results have a filter successful snapshot test 1`] = `
Array [
  <header>
    <nav>
      <a
        className="fsControls navLink"
        href="/"
        onClick={[Function]}
      >
        <div
          className="appIcon homeIcon"
          data-testid="homeIcon"
        >
          <svg
            fill="currentColor"
            height="1em"
            stroke="currentColor"
            strokeWidth="0"
            viewBox="0 0 24 24"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <title>
              home-icon
            </title>
            <g>
              <path
                d="M0 0h24v24H0z"
                fill="none"
              />
              <path
                d="M19 21H5a1 1 0 0 1-1-1v-9H1l10.327-9.388a1 1 0 0 1 1.346 0L23 11h-3v9a1 1 0 0 1-1 1zM6 19h12V9.157l-6-5.454-6 5.454V19zm2-4h8v2H8v-2z"
              />
            </g>
          </svg>
        </div>
        <span
          className="fsControls navName"
        >
          Home
        </span>
      </a>
      <a
        aria-current="page"
        className="fsControls navLink active"
        href="/coins"
        id="cancel-filter"
        onClick={[Function]}
      >
        <div
          className="appIcon CoinsIcon"
          data-testid="CoinsIcon"
        >
          <svg
            fill="currentColor"
            height="1em"
            stroke="currentColor"
            strokeWidth="0"
            viewBox="0 0 512 512"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <title>
              coins-icon
            </title>
            <path
              d="M0 405.3V448c0 35.3 86 64 192 64s192-28.7 192-64v-42.7C342.7 434.4 267.2 448 192 448S41.3 434.4 0 405.3zM320 128c106 0 192-28.7 192-64S426 0 320 0 128 28.7 128 64s86 64 192 64zM0 300.4V352c0 35.3 86 64 192 64s192-28.7 192-64v-51.6c-41.3 34-116.9 51.6-192 51.6S41.3 334.4 0 300.4zm416 11c57.3-11.1 96-31.7 96-55.4v-42.7c-23.2 16.4-57.3 27.6-96 34.5v63.6zM192 160C86 160 0 195.8 0 240s86 80 192 80 192-35.8 192-80-86-80-192-80zm219.3 56.3c60-10.8 100.7-32 100.7-56.3v-42.7c-35.5 25.1-96.5 38.6-160.7 41.8 29.5 14.3 51.2 33.5 60 57.2z"
            />
          </svg>
        </div>
        <span
          className="fsControls navName"
        >
          Coins
        </span>
      </a>
    </nav>
    <form
      id="filter"
      onSubmit={[Function]}
    >
      <input
        id="field"
        onChange={[Function]}
        placeholder="filter by name/symbol"
        type="text"
        value=""
      />
      <button
        className="ctrl-btn filter-btn"
        data-testid="filter-btn"
        id="cancel"
        onClick={[Function]}
        type="button"
      >
        <div
          className="appIcon lensIcon"
          data-testid="lensIcon"
        >
          <svg
            fill="currentColor"
            height="800px"
            id="filter-icon"
            version="1.1"
            viewBox="0 0 32 32"
            width="800px"
            xmlns="http://www.w3.org/2000/svg"
          >
            <title>
              lens-icon
            </title>
            <path
              d="M0 14.048q0 2.848 1.12 5.44t2.976 4.48 4.48 2.976 5.472 1.12q4.064 0 7.52-2.24l5.312 5.312q0.864 0.864 2.112 0.864t2.144-0.864 0.864-2.112-0.864-2.144l-5.312-5.312q2.24-3.456 2.24-7.52 0-2.88-1.12-5.472t-2.976-4.448-4.48-3.008-5.44-1.12q-2.88 0-5.472 1.12t-4.48 3.008-2.976 4.448-1.12 5.472zM4 14.048q0-2.752 1.344-5.056t3.648-3.648 5.056-1.344q2.688 0 5.024 1.344t3.648 3.648 1.344 5.056q0 2.72-1.344 5.024t-3.648 3.648-5.024 1.344q-2.752 0-5.056-1.344t-3.648-3.648-1.344-5.024z"
            />
          </svg>
        </div>
      </button>
    </form>
  </header>,
  <div
    className="wrapper"
  >
    <section
      className="allCoins"
    >
      <a
        className="coinLink evenCoin"
        href="/coins/bitcoin"
        onClick={[Function]}
      >
        <div
          className="appIcon moreIcon"
          data-testid="moreIcon"
        >
          <svg
            height="1em"
            version="1.1"
            viewBox="0 0 20 20"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <title>
              more-icon
            </title>
            <defs />
            <g
              fill="none"
              fillRule="evenodd"
              id="Page-1"
              stroke="none"
              strokeWidth="1"
            >
              <g
                fill="currentColor"
                transform="translate(-420.000000, -6559.000000)"
              >
                <g
                  transform="translate(56.000000, 160.000000)"
                >
                  <path
                    d="M375.127681,6399.29274 C374.737008,6398.90242 374.104537,6398.90242 373.714864,6399.29274 C373.324191,6399.68307 373.324191,6400.31497 373.714864,6400.7043 L380.149475,6407.14215 C380.464211,6407.45661 380.241398,6408.00167 379.79677,6408.00167 L365.016149,6408.00167 C364.464611,6408.00167 364,6408.44091 364,6408.99195 L364,6408.99594 C364,6409.54699 364.464611,6409.99821 365.016149,6409.99821 L379.79677,6409.99821 C380.241398,6409.99821 380.464211,6410.52829 380.149475,6410.84275 L373.68389,6417.29957 C373.293217,6417.68889 373.293217,6418.3188 373.68389,6418.70913 L373.68389,6418.70813 C374.073563,6419.09746 374.706034,6419.09746 375.096707,6418.70713 L383.41474,6410.39652 L383.41474,6410.39652 C384.195087,6409.61687 384.195087,6408.35206 383.41474,6407.57241 C383.233892,6407.39272 374.946832,6399.11206 375.127681,6399.29274"
                  />
                </g>
              </g>
            </g>
          </svg>
        </div>
        <article
          className="coinItem"
          data-testid="bitcoin"
        >
          <section
            className="itemSection itemHeader"
          >
            <h3
              className="itemName"
              data-testid="coinName"
            >
              Bitcoin
            </h3>
            <div
              className="iconContainer"
            >
              <img
                alt="Bitcoin"
                className="coinIcon"
                data-testid="coinLogo"
                src="generic-crypto-mock-logo.svg"
              />
            </div>
          </section>
          <section
            className="itemSection"
          >
            <div
              className="itemDescription"
            >
              <h3
                className="itemCategory rankCategory"
              >
                Rank
              </h3>
              <p
                className="itemData rankData"
                data-testid="coinRank"
              >
                1
              </p>
            </div>
            <div
              className="itemDescription"
            >
              <h4
                className="itemCategory"
              >
                Symbol
              </h4>
              <p
                className="itemData"
                data-testid="coinSymbol"
              >
                BTC
              </p>
            </div>
          </section>
        </article>
      </a>
      <a
        className="coinLink oddCoin"
        href="/coins/ethereum"
        onClick={[Function]}
      >
        <div
          className="appIcon moreIcon"
          data-testid="moreIcon"
        >
          <svg
            height="1em"
            version="1.1"
            viewBox="0 0 20 20"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <title>
              more-icon
            </title>
            <defs />
            <g
              fill="none"
              fillRule="evenodd"
              id="Page-1"
              stroke="none"
              strokeWidth="1"
            >
              <g
                fill="currentColor"
                transform="translate(-420.000000, -6559.000000)"
              >
                <g
                  transform="translate(56.000000, 160.000000)"
                >
                  <path
                    d="M375.127681,6399.29274 C374.737008,6398.90242 374.104537,6398.90242 373.714864,6399.29274 C373.324191,6399.68307 373.324191,6400.31497 373.714864,6400.7043 L380.149475,6407.14215 C380.464211,6407.45661 380.241398,6408.00167 379.79677,6408.00167 L365.016149,6408.00167 C364.464611,6408.00167 364,6408.44091 364,6408.99195 L364,6408.99594 C364,6409.54699 364.464611,6409.99821 365.016149,6409.99821 L379.79677,6409.99821 C380.241398,6409.99821 380.464211,6410.52829 380.149475,6410.84275 L373.68389,6417.29957 C373.293217,6417.68889 373.293217,6418.3188 373.68389,6418.70913 L373.68389,6418.70813 C374.073563,6419.09746 374.706034,6419.09746 375.096707,6418.70713 L383.41474,6410.39652 L383.41474,6410.39652 C384.195087,6409.61687 384.195087,6408.35206 383.41474,6407.57241 C383.233892,6407.39272 374.946832,6399.11206 375.127681,6399.29274"
                  />
                </g>
              </g>
            </g>
          </svg>
        </div>
        <article
          className="coinItem"
          data-testid="ethereum"
        >
          <section
            className="itemSection itemHeader"
          >
            <h3
              className="itemName"
              data-testid="coinName"
            >
              Ethereum
            </h3>
            <div
              className="iconContainer"
            >
              <img
                alt="Ethereum"
                className="coinIcon"
                data-testid="coinLogo"
                src="generic-crypto-mock-logo.svg"
              />
            </div>
          </section>
          <section
            className="itemSection"
          >
            <div
              className="itemDescription"
            >
              <h3
                className="itemCategory rankCategory"
              >
                Rank
              </h3>
              <p
                className="itemData rankData"
                data-testid="coinRank"
              >
                2
              </p>
            </div>
            <div
              className="itemDescription"
            >
              <h4
                className="itemCategory"
              >
                Symbol
              </h4>
              <p
                className="itemData"
                data-testid="coinSymbol"
              >
                ETH
              </p>
            </div>
          </section>
        </article>
      </a>
      <a
        className="coinLink evenCoin"
        href="/coins/tether"
        onClick={[Function]}
      >
        <div
          className="appIcon moreIcon"
          data-testid="moreIcon"
        >
          <svg
            height="1em"
            version="1.1"
            viewBox="0 0 20 20"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <title>
              more-icon
            </title>
            <defs />
            <g
              fill="none"
              fillRule="evenodd"
              id="Page-1"
              stroke="none"
              strokeWidth="1"
            >
              <g
                fill="currentColor"
                transform="translate(-420.000000, -6559.000000)"
              >
                <g
                  transform="translate(56.000000, 160.000000)"
                >
                  <path
                    d="M375.127681,6399.29274 C374.737008,6398.90242 374.104537,6398.90242 373.714864,6399.29274 C373.324191,6399.68307 373.324191,6400.31497 373.714864,6400.7043 L380.149475,6407.14215 C380.464211,6407.45661 380.241398,6408.00167 379.79677,6408.00167 L365.016149,6408.00167 C364.464611,6408.00167 364,6408.44091 364,6408.99195 L364,6408.99594 C364,6409.54699 364.464611,6409.99821 365.016149,6409.99821 L379.79677,6409.99821 C380.241398,6409.99821 380.464211,6410.52829 380.149475,6410.84275 L373.68389,6417.29957 C373.293217,6417.68889 373.293217,6418.3188 373.68389,6418.70913 L373.68389,6418.70813 C374.073563,6419.09746 374.706034,6419.09746 375.096707,6418.70713 L383.41474,6410.39652 L383.41474,6410.39652 C384.195087,6409.61687 384.195087,6408.35206 383.41474,6407.57241 C383.233892,6407.39272 374.946832,6399.11206 375.127681,6399.29274"
                  />
                </g>
              </g>
            </g>
          </svg>
        </div>
        <article
          className="coinItem"
          data-testid="tether"
        >
          <section
            className="itemSection itemHeader"
          >
            <h3
              className="itemName"
              data-testid="coinName"
            >
              Tether
            </h3>
            <div
              className="iconContainer"
            >
              <img
                alt="Tether"
                className="coinIcon"
                data-testid="coinLogo"
                src="generic-crypto-mock-logo.svg"
              />
            </div>
          </section>
          <section
            className="itemSection"
          >
            <div
              className="itemDescription"
            >
              <h3
                className="itemCategory rankCategory"
              >
                Rank
              </h3>
              <p
                className="itemData rankData"
                data-testid="coinRank"
              >
                3
              </p>
            </div>
            <div
              className="itemDescription"
            >
              <h4
                className="itemCategory"
              >
                Symbol
              </h4>
              <p
                className="itemData"
                data-testid="coinSymbol"
              >
                USDT
              </p>
            </div>
          </section>
        </article>
      </a>
      <a
        className="coinLink oddCoin"
        href="/coins/binance-coin"
        onClick={[Function]}
      >
        <div
          className="appIcon moreIcon"
          data-testid="moreIcon"
        >
          <svg
            height="1em"
            version="1.1"
            viewBox="0 0 20 20"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <title>
              more-icon
            </title>
            <defs />
            <g
              fill="none"
              fillRule="evenodd"
              id="Page-1"
              stroke="none"
              strokeWidth="1"
            >
              <g
                fill="currentColor"
                transform="translate(-420.000000, -6559.000000)"
              >
                <g
                  transform="translate(56.000000, 160.000000)"
                >
                  <path
                    d="M375.127681,6399.29274 C374.737008,6398.90242 374.104537,6398.90242 373.714864,6399.29274 C373.324191,6399.68307 373.324191,6400.31497 373.714864,6400.7043 L380.149475,6407.14215 C380.464211,6407.45661 380.241398,6408.00167 379.79677,6408.00167 L365.016149,6408.00167 C364.464611,6408.00167 364,6408.44091 364,6408.99195 L364,6408.99594 C364,6409.54699 364.464611,6409.99821 365.016149,6409.99821 L379.79677,6409.99821 C380.241398,6409.99821 380.464211,6410.52829 380.149475,6410.84275 L373.68389,6417.29957 C373.293217,6417.68889 373.293217,6418.3188 373.68389,6418.70913 L373.68389,6418.70813 C374.073563,6419.09746 374.706034,6419.09746 375.096707,6418.70713 L383.41474,6410.39652 L383.41474,6410.39652 C384.195087,6409.61687 384.195087,6408.35206 383.41474,6407.57241 C383.233892,6407.39272 374.946832,6399.11206 375.127681,6399.29274"
                  />
                </g>
              </g>
            </g>
          </svg>
        </div>
        <article
          className="coinItem"
          data-testid="binance-coin"
        >
          <section
            className="itemSection itemHeader"
          >
            <h3
              className="itemName"
              data-testid="coinName"
            >
              BNB
            </h3>
            <div
              className="iconContainer"
            >
              <img
                alt="BNB"
                className="coinIcon"
                data-testid="coinLogo"
                src="generic-crypto-mock-logo.svg"
              />
            </div>
          </section>
          <section
            className="itemSection"
          >
            <div
              className="itemDescription"
            >
              <h3
                className="itemCategory rankCategory"
              >
                Rank
              </h3>
              <p
                className="itemData rankData"
                data-testid="coinRank"
              >
                4
              </p>
            </div>
            <div
              className="itemDescription"
            >
              <h4
                className="itemCategory"
              >
                Symbol
              </h4>
              <p
                className="itemData"
                data-testid="coinSymbol"
              >
                BNB
              </p>
            </div>
          </section>
        </article>
      </a>
      <a
        className="coinLink evenCoin"
        href="/coins/usd-coin"
        onClick={[Function]}
      >
        <div
          className="appIcon moreIcon"
          data-testid="moreIcon"
        >
          <svg
            height="1em"
            version="1.1"
            viewBox="0 0 20 20"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <title>
              more-icon
            </title>
            <defs />
            <g
              fill="none"
              fillRule="evenodd"
              id="Page-1"
              stroke="none"
              strokeWidth="1"
            >
              <g
                fill="currentColor"
                transform="translate(-420.000000, -6559.000000)"
              >
                <g
                  transform="translate(56.000000, 160.000000)"
                >
                  <path
                    d="M375.127681,6399.29274 C374.737008,6398.90242 374.104537,6398.90242 373.714864,6399.29274 C373.324191,6399.68307 373.324191,6400.31497 373.714864,6400.7043 L380.149475,6407.14215 C380.464211,6407.45661 380.241398,6408.00167 379.79677,6408.00167 L365.016149,6408.00167 C364.464611,6408.00167 364,6408.44091 364,6408.99195 L364,6408.99594 C364,6409.54699 364.464611,6409.99821 365.016149,6409.99821 L379.79677,6409.99821 C380.241398,6409.99821 380.464211,6410.52829 380.149475,6410.84275 L373.68389,6417.29957 C373.293217,6417.68889 373.293217,6418.3188 373.68389,6418.70913 L373.68389,6418.70813 C374.073563,6419.09746 374.706034,6419.09746 375.096707,6418.70713 L383.41474,6410.39652 L383.41474,6410.39652 C384.195087,6409.61687 384.195087,6408.35206 383.41474,6407.57241 C383.233892,6407.39272 374.946832,6399.11206 375.127681,6399.29274"
                  />
                </g>
              </g>
            </g>
          </svg>
        </div>
        <article
          className="coinItem"
          data-testid="usd-coin"
        >
          <section
            className="itemSection itemHeader"
          >
            <h3
              className="itemName"
              data-testid="coinName"
            >
              USD Coin
            </h3>
            <div
              className="iconContainer"
            >
              <img
                alt="USD Coin"
                className="coinIcon"
                data-testid="coinLogo"
                src="generic-crypto-mock-logo.svg"
              />
            </div>
          </section>
          <section
            className="itemSection"
          >
            <div
              className="itemDescription"
            >
              <h3
                className="itemCategory rankCategory"
              >
                Rank
              </h3>
              <p
                className="itemData rankData"
                data-testid="coinRank"
              >
                5
              </p>
            </div>
            <div
              className="itemDescription"
            >
              <h4
                className="itemCategory"
              >
                Symbol
              </h4>
              <p
                className="itemData"
                data-testid="coinSymbol"
              >
                USDC
              </p>
            </div>
          </section>
        </article>
      </a>
    </section>
  </div>,
]
`;

exports[`FULL App unit test at coins page, when a coin from the list is clicked successful snapshot test 1`] = `
Array [
  <header>
    <nav>
      <a
        className="fsControls navLink"
        href="/coins"
        onClick={[Function]}
      >
        <div
          className="appIcon goBackIcon"
          data-testid="goBackIcon"
        >
          <svg
            fill="currentColor"
            height="1em"
            version="1.1"
            viewBox="0 0 492 492"
            width="1em"
            xmlSpace="preserve"
            xmlns="http://www.w3.org/2000/svg"
          >
            <title>
              back-icon
            </title>
            <g>
              <g>
                <path
                  d="M198.608,246.104L382.664,62.04c5.068-5.056,7.856-11.816,7.856-19.024c0-7.212-2.788-13.968-7.856-19.032l-16.128-16.12 C361.476,2.792,354.712,0,347.504,0s-13.964,2.792-19.028,7.864L109.328,227.008c-5.084,5.08-7.868,11.868-7.848,19.084 c-0.02,7.248,2.76,14.028,7.848,19.112l218.944,218.932c5.064,5.072,11.82,7.864,19.032,7.864c7.208,0,13.964-2.792,19.032-7.864 l16.124-16.12c10.492-10.492,10.492-27.572,0-38.06L198.608,246.104z"
                />
              </g>
            </g>
          </svg>
        </div>
      </a>
      <a
        aria-current="page"
        className="fsControls navLink navCoin active"
        href="/coins/bitcoin"
        onClick={[Function]}
      >
        <div
          className="appIcon CoinIcon"
          data-testid="CoinIcon"
        >
          <svg
            fill="currentColor"
            height="1em"
            stroke="currentColor"
            strokeWidth="0"
            viewBox="0 0 24 24"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <g>
              <path
                d="M0 0h24v24H0z"
                fill="none"
              />
              <path
                d="M23 12v2c0 3.314-4.925 6-11 6-5.967 0-10.824-2.591-10.995-5.823L1 14v-2c0 3.314 4.925 6 11 6s11-2.686 11-6zM12 4c6.075 0 11 2.686 11 6s-4.925 6-11 6-11-2.686-11-6 4.925-6 11-6z"
              />
            </g>
          </svg>
        </div>
        <span
          className="fsControls navName"
        >
          Bitcoin
        </span>
      </a>
    </nav>
  </header>,
  <div
    className="wrapper"
  >
    <section
      className="coinDetails"
    >
      <article
        className="coin"
        data-testid="bitcoin"
      >
        <div
          className="coinBasics"
        >
          <div
            className="iconContainer"
          >
            <img
              alt="Bitcoin"
              className="coinIcon"
              data-testid="coinIcon"
              src="generic-crypto-mock-logo.svg"
            />
          </div>
          <section
            className="descriptionSection"
          >
            <h3
              className="coinName"
              data-testid="coinName"
            >
              Bitcoin
            </h3>
            <h4
              className="sectionCategory symbolCategory"
              data-testid="coinSymbol"
            >
              Symbol
            </h4>
            <p
              className="sectionData symbolData"
            >
              BTC
            </p>
          </section>
        </div>
        <div
          className="coinDescription"
        >
          <section
            className="descriptionSection"
          >
            <h3
              className="sectionCategory rankCategory"
            >
              Rank
            </h3>
            <p
              className="sectionData rankData"
              data-testid="coinRank"
            >
              1
            </p>
          </section>
          <section
            className="descriptionSection"
          >
            <h4
              className="sectionCategory"
            >
              Price
            </h4>
            <p
              className="sectionData"
              data-testid="coinPrice"
            >
              27,242.27
            </p>
            <h4
              className="sectionCategory"
            >
              Volume
            </h4>
            <p
              className="sectionData"
              data-testid="coinVolume"
            >
              82,809,392,859.99
            </p>
          </section>
          <section
            className="descriptionSection"
          >
            <h4
              className="sectionSubCategory"
            >
              Price Change
            </h4>
            <h5
              className="sectionTitle"
            >
              1 hour
            </h5>
            <p
              className="sectionData"
              data-testid="coinPrice1h"
            >
              -0.17
            </p>
            <h5
              className="sectionTitle"
            >
              1 day
            </h5>
            <p
              className="sectionData"
              data-testid="coinPrice1d"
            >
              -2.98
            </p>
            <h5
              className="sectionTitle"
            >
              1 week
            </h5>
            <p
              className="sectionData"
              data-testid="coinPrice1w"
            >
              -10.38
            </p>
          </section>
        </div>
      </article>
    </section>
  </div>,
]
`;

exports[`FULL App unit test at details page, the navbar shows successful snapshot test 1`] = `
Array [
  <header>
    <nav>
      <a
        className="fsControls navLink"
        href="/coins"
        onClick={[Function]}
      >
        <div
          className="appIcon goBackIcon"
          data-testid="goBackIcon"
        >
          <svg
            fill="currentColor"
            height="1em"
            version="1.1"
            viewBox="0 0 492 492"
            width="1em"
            xmlSpace="preserve"
            xmlns="http://www.w3.org/2000/svg"
          >
            <title>
              back-icon
            </title>
            <g>
              <g>
                <path
                  d="M198.608,246.104L382.664,62.04c5.068-5.056,7.856-11.816,7.856-19.024c0-7.212-2.788-13.968-7.856-19.032l-16.128-16.12 C361.476,2.792,354.712,0,347.504,0s-13.964,2.792-19.028,7.864L109.328,227.008c-5.084,5.08-7.868,11.868-7.848,19.084 c-0.02,7.248,2.76,14.028,7.848,19.112l218.944,218.932c5.064,5.072,11.82,7.864,19.032,7.864c7.208,0,13.964-2.792,19.032-7.864 l16.124-16.12c10.492-10.492,10.492-27.572,0-38.06L198.608,246.104z"
                />
              </g>
            </g>
          </svg>
        </div>
      </a>
      <a
        aria-current="page"
        className="fsControls navLink navCoin active"
        href="/coins/bitcoin"
        onClick={[Function]}
      >
        <div
          className="appIcon CoinIcon"
          data-testid="CoinIcon"
        >
          <svg
            fill="currentColor"
            height="1em"
            stroke="currentColor"
            strokeWidth="0"
            viewBox="0 0 24 24"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <g>
              <path
                d="M0 0h24v24H0z"
                fill="none"
              />
              <path
                d="M23 12v2c0 3.314-4.925 6-11 6-5.967 0-10.824-2.591-10.995-5.823L1 14v-2c0 3.314 4.925 6 11 6s11-2.686 11-6zM12 4c6.075 0 11 2.686 11 6s-4.925 6-11 6-11-2.686-11-6 4.925-6 11-6z"
              />
            </g>
          </svg>
        </div>
        <span
          className="fsControls navName"
        >
          Bitcoin
        </span>
      </a>
    </nav>
  </header>,
  <div
    className="wrapper"
  >
    <section
      className="coinDetails"
    >
      <article
        className="coin"
        data-testid="bitcoin"
      >
        <div
          className="coinBasics"
        >
          <div
            className="iconContainer"
          >
            <img
              alt="Bitcoin"
              className="coinIcon"
              data-testid="coinIcon"
              src="generic-crypto-mock-logo.svg"
            />
          </div>
          <section
            className="descriptionSection"
          >
            <h3
              className="coinName"
              data-testid="coinName"
            >
              Bitcoin
            </h3>
            <h4
              className="sectionCategory symbolCategory"
              data-testid="coinSymbol"
            >
              Symbol
            </h4>
            <p
              className="sectionData symbolData"
            >
              BTC
            </p>
          </section>
        </div>
        <div
          className="coinDescription"
        >
          <section
            className="descriptionSection"
          >
            <h3
              className="sectionCategory rankCategory"
            >
              Rank
            </h3>
            <p
              className="sectionData rankData"
              data-testid="coinRank"
            >
              1
            </p>
          </section>
          <section
            className="descriptionSection"
          >
            <h4
              className="sectionCategory"
            >
              Price
            </h4>
            <p
              className="sectionData"
              data-testid="coinPrice"
            >
              27,242.27
            </p>
            <h4
              className="sectionCategory"
            >
              Volume
            </h4>
            <p
              className="sectionData"
              data-testid="coinVolume"
            >
              82,809,392,859.99
            </p>
          </section>
          <section
            className="descriptionSection"
          >
            <h4
              className="sectionSubCategory"
            >
              Price Change
            </h4>
            <h5
              className="sectionTitle"
            >
              1 hour
            </h5>
            <p
              className="sectionData"
              data-testid="coinPrice1h"
            >
              -0.17
            </p>
            <h5
              className="sectionTitle"
            >
              1 day
            </h5>
            <p
              className="sectionData"
              data-testid="coinPrice1d"
            >
              -2.98
            </p>
            <h5
              className="sectionTitle"
            >
              1 week
            </h5>
            <p
              className="sectionData"
              data-testid="coinPrice1w"
            >
              -10.38
            </p>
          </section>
        </div>
      </article>
    </section>
  </div>,
]
`;

exports[`FULL App unit test at details page, when the back (<) button is clicked successful snapshot test 1`] = `
Array [
  <header>
    <nav>
      <a
        className="fsControls navLink"
        href="/"
        onClick={[Function]}
      >
        <div
          className="appIcon homeIcon"
          data-testid="homeIcon"
        >
          <svg
            fill="currentColor"
            height="1em"
            stroke="currentColor"
            strokeWidth="0"
            viewBox="0 0 24 24"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <title>
              home-icon
            </title>
            <g>
              <path
                d="M0 0h24v24H0z"
                fill="none"
              />
              <path
                d="M19 21H5a1 1 0 0 1-1-1v-9H1l10.327-9.388a1 1 0 0 1 1.346 0L23 11h-3v9a1 1 0 0 1-1 1zM6 19h12V9.157l-6-5.454-6 5.454V19zm2-4h8v2H8v-2z"
              />
            </g>
          </svg>
        </div>
        <span
          className="fsControls navName"
        >
          Home
        </span>
      </a>
      <a
        aria-current="page"
        className="fsControls navLink active"
        href="/coins"
        id="cancel-filter"
        onClick={[Function]}
      >
        <div
          className="appIcon CoinsIcon"
          data-testid="CoinsIcon"
        >
          <svg
            fill="currentColor"
            height="1em"
            stroke="currentColor"
            strokeWidth="0"
            viewBox="0 0 512 512"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <title>
              coins-icon
            </title>
            <path
              d="M0 405.3V448c0 35.3 86 64 192 64s192-28.7 192-64v-42.7C342.7 434.4 267.2 448 192 448S41.3 434.4 0 405.3zM320 128c106 0 192-28.7 192-64S426 0 320 0 128 28.7 128 64s86 64 192 64zM0 300.4V352c0 35.3 86 64 192 64s192-28.7 192-64v-51.6c-41.3 34-116.9 51.6-192 51.6S41.3 334.4 0 300.4zm416 11c57.3-11.1 96-31.7 96-55.4v-42.7c-23.2 16.4-57.3 27.6-96 34.5v63.6zM192 160C86 160 0 195.8 0 240s86 80 192 80 192-35.8 192-80-86-80-192-80zm219.3 56.3c60-10.8 100.7-32 100.7-56.3v-42.7c-35.5 25.1-96.5 38.6-160.7 41.8 29.5 14.3 51.2 33.5 60 57.2z"
            />
          </svg>
        </div>
        <span
          className="fsControls navName"
        >
          Coins
        </span>
      </a>
    </nav>
    <form
      id="filter"
      onSubmit={[Function]}
    >
      <input
        id="field"
        onChange={[Function]}
        placeholder="filter by name/symbol"
        type="text"
        value=""
      />
      <button
        className="ctrl-btn filter-btn"
        data-testid="filter-btn"
        id="cancel"
        onClick={[Function]}
        type="button"
      >
        <div
          className="appIcon lensIcon"
          data-testid="lensIcon"
        >
          <svg
            fill="currentColor"
            height="800px"
            id="filter-icon"
            version="1.1"
            viewBox="0 0 32 32"
            width="800px"
            xmlns="http://www.w3.org/2000/svg"
          >
            <title>
              lens-icon
            </title>
            <path
              d="M0 14.048q0 2.848 1.12 5.44t2.976 4.48 4.48 2.976 5.472 1.12q4.064 0 7.52-2.24l5.312 5.312q0.864 0.864 2.112 0.864t2.144-0.864 0.864-2.112-0.864-2.144l-5.312-5.312q2.24-3.456 2.24-7.52 0-2.88-1.12-5.472t-2.976-4.448-4.48-3.008-5.44-1.12q-2.88 0-5.472 1.12t-4.48 3.008-2.976 4.448-1.12 5.472zM4 14.048q0-2.752 1.344-5.056t3.648-3.648 5.056-1.344q2.688 0 5.024 1.344t3.648 3.648 1.344 5.056q0 2.72-1.344 5.024t-3.648 3.648-5.024 1.344q-2.752 0-5.056-1.344t-3.648-3.648-1.344-5.024z"
            />
          </svg>
        </div>
      </button>
    </form>
  </header>,
  <div
    className="wrapper"
  >
    <section
      className="allCoins"
    >
      <a
        className="coinLink evenCoin"
        href="/coins/bitcoin"
        onClick={[Function]}
      >
        <div
          className="appIcon moreIcon"
          data-testid="moreIcon"
        >
          <svg
            height="1em"
            version="1.1"
            viewBox="0 0 20 20"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <title>
              more-icon
            </title>
            <defs />
            <g
              fill="none"
              fillRule="evenodd"
              id="Page-1"
              stroke="none"
              strokeWidth="1"
            >
              <g
                fill="currentColor"
                transform="translate(-420.000000, -6559.000000)"
              >
                <g
                  transform="translate(56.000000, 160.000000)"
                >
                  <path
                    d="M375.127681,6399.29274 C374.737008,6398.90242 374.104537,6398.90242 373.714864,6399.29274 C373.324191,6399.68307 373.324191,6400.31497 373.714864,6400.7043 L380.149475,6407.14215 C380.464211,6407.45661 380.241398,6408.00167 379.79677,6408.00167 L365.016149,6408.00167 C364.464611,6408.00167 364,6408.44091 364,6408.99195 L364,6408.99594 C364,6409.54699 364.464611,6409.99821 365.016149,6409.99821 L379.79677,6409.99821 C380.241398,6409.99821 380.464211,6410.52829 380.149475,6410.84275 L373.68389,6417.29957 C373.293217,6417.68889 373.293217,6418.3188 373.68389,6418.70913 L373.68389,6418.70813 C374.073563,6419.09746 374.706034,6419.09746 375.096707,6418.70713 L383.41474,6410.39652 L383.41474,6410.39652 C384.195087,6409.61687 384.195087,6408.35206 383.41474,6407.57241 C383.233892,6407.39272 374.946832,6399.11206 375.127681,6399.29274"
                  />
                </g>
              </g>
            </g>
          </svg>
        </div>
        <article
          className="coinItem"
          data-testid="bitcoin"
        >
          <section
            className="itemSection itemHeader"
          >
            <h3
              className="itemName"
              data-testid="coinName"
            >
              Bitcoin
            </h3>
            <div
              className="iconContainer"
            >
              <img
                alt="Bitcoin"
                className="coinIcon"
                data-testid="coinLogo"
                src="generic-crypto-mock-logo.svg"
              />
            </div>
          </section>
          <section
            className="itemSection"
          >
            <div
              className="itemDescription"
            >
              <h3
                className="itemCategory rankCategory"
              >
                Rank
              </h3>
              <p
                className="itemData rankData"
                data-testid="coinRank"
              >
                1
              </p>
            </div>
            <div
              className="itemDescription"
            >
              <h4
                className="itemCategory"
              >
                Symbol
              </h4>
              <p
                className="itemData"
                data-testid="coinSymbol"
              >
                BTC
              </p>
            </div>
          </section>
        </article>
      </a>
      <a
        className="coinLink oddCoin"
        href="/coins/ethereum"
        onClick={[Function]}
      >
        <div
          className="appIcon moreIcon"
          data-testid="moreIcon"
        >
          <svg
            height="1em"
            version="1.1"
            viewBox="0 0 20 20"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <title>
              more-icon
            </title>
            <defs />
            <g
              fill="none"
              fillRule="evenodd"
              id="Page-1"
              stroke="none"
              strokeWidth="1"
            >
              <g
                fill="currentColor"
                transform="translate(-420.000000, -6559.000000)"
              >
                <g
                  transform="translate(56.000000, 160.000000)"
                >
                  <path
                    d="M375.127681,6399.29274 C374.737008,6398.90242 374.104537,6398.90242 373.714864,6399.29274 C373.324191,6399.68307 373.324191,6400.31497 373.714864,6400.7043 L380.149475,6407.14215 C380.464211,6407.45661 380.241398,6408.00167 379.79677,6408.00167 L365.016149,6408.00167 C364.464611,6408.00167 364,6408.44091 364,6408.99195 L364,6408.99594 C364,6409.54699 364.464611,6409.99821 365.016149,6409.99821 L379.79677,6409.99821 C380.241398,6409.99821 380.464211,6410.52829 380.149475,6410.84275 L373.68389,6417.29957 C373.293217,6417.68889 373.293217,6418.3188 373.68389,6418.70913 L373.68389,6418.70813 C374.073563,6419.09746 374.706034,6419.09746 375.096707,6418.70713 L383.41474,6410.39652 L383.41474,6410.39652 C384.195087,6409.61687 384.195087,6408.35206 383.41474,6407.57241 C383.233892,6407.39272 374.946832,6399.11206 375.127681,6399.29274"
                  />
                </g>
              </g>
            </g>
          </svg>
        </div>
        <article
          className="coinItem"
          data-testid="ethereum"
        >
          <section
            className="itemSection itemHeader"
          >
            <h3
              className="itemName"
              data-testid="coinName"
            >
              Ethereum
            </h3>
            <div
              className="iconContainer"
            >
              <img
                alt="Ethereum"
                className="coinIcon"
                data-testid="coinLogo"
                src="generic-crypto-mock-logo.svg"
              />
            </div>
          </section>
          <section
            className="itemSection"
          >
            <div
              className="itemDescription"
            >
              <h3
                className="itemCategory rankCategory"
              >
                Rank
              </h3>
              <p
                className="itemData rankData"
                data-testid="coinRank"
              >
                2
              </p>
            </div>
            <div
              className="itemDescription"
            >
              <h4
                className="itemCategory"
              >
                Symbol
              </h4>
              <p
                className="itemData"
                data-testid="coinSymbol"
              >
                ETH
              </p>
            </div>
          </section>
        </article>
      </a>
      <a
        className="coinLink evenCoin"
        href="/coins/tether"
        onClick={[Function]}
      >
        <div
          className="appIcon moreIcon"
          data-testid="moreIcon"
        >
          <svg
            height="1em"
            version="1.1"
            viewBox="0 0 20 20"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <title>
              more-icon
            </title>
            <defs />
            <g
              fill="none"
              fillRule="evenodd"
              id="Page-1"
              stroke="none"
              strokeWidth="1"
            >
              <g
                fill="currentColor"
                transform="translate(-420.000000, -6559.000000)"
              >
                <g
                  transform="translate(56.000000, 160.000000)"
                >
                  <path
                    d="M375.127681,6399.29274 C374.737008,6398.90242 374.104537,6398.90242 373.714864,6399.29274 C373.324191,6399.68307 373.324191,6400.31497 373.714864,6400.7043 L380.149475,6407.14215 C380.464211,6407.45661 380.241398,6408.00167 379.79677,6408.00167 L365.016149,6408.00167 C364.464611,6408.00167 364,6408.44091 364,6408.99195 L364,6408.99594 C364,6409.54699 364.464611,6409.99821 365.016149,6409.99821 L379.79677,6409.99821 C380.241398,6409.99821 380.464211,6410.52829 380.149475,6410.84275 L373.68389,6417.29957 C373.293217,6417.68889 373.293217,6418.3188 373.68389,6418.70913 L373.68389,6418.70813 C374.073563,6419.09746 374.706034,6419.09746 375.096707,6418.70713 L383.41474,6410.39652 L383.41474,6410.39652 C384.195087,6409.61687 384.195087,6408.35206 383.41474,6407.57241 C383.233892,6407.39272 374.946832,6399.11206 375.127681,6399.29274"
                  />
                </g>
              </g>
            </g>
          </svg>
        </div>
        <article
          className="coinItem"
          data-testid="tether"
        >
          <section
            className="itemSection itemHeader"
          >
            <h3
              className="itemName"
              data-testid="coinName"
            >
              Tether
            </h3>
            <div
              className="iconContainer"
            >
              <img
                alt="Tether"
                className="coinIcon"
                data-testid="coinLogo"
                src="generic-crypto-mock-logo.svg"
              />
            </div>
          </section>
          <section
            className="itemSection"
          >
            <div
              className="itemDescription"
            >
              <h3
                className="itemCategory rankCategory"
              >
                Rank
              </h3>
              <p
                className="itemData rankData"
                data-testid="coinRank"
              >
                3
              </p>
            </div>
            <div
              className="itemDescription"
            >
              <h4
                className="itemCategory"
              >
                Symbol
              </h4>
              <p
                className="itemData"
                data-testid="coinSymbol"
              >
                USDT
              </p>
            </div>
          </section>
        </article>
      </a>
      <a
        className="coinLink oddCoin"
        href="/coins/binance-coin"
        onClick={[Function]}
      >
        <div
          className="appIcon moreIcon"
          data-testid="moreIcon"
        >
          <svg
            height="1em"
            version="1.1"
            viewBox="0 0 20 20"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <title>
              more-icon
            </title>
            <defs />
            <g
              fill="none"
              fillRule="evenodd"
              id="Page-1"
              stroke="none"
              strokeWidth="1"
            >
              <g
                fill="currentColor"
                transform="translate(-420.000000, -6559.000000)"
              >
                <g
                  transform="translate(56.000000, 160.000000)"
                >
                  <path
                    d="M375.127681,6399.29274 C374.737008,6398.90242 374.104537,6398.90242 373.714864,6399.29274 C373.324191,6399.68307 373.324191,6400.31497 373.714864,6400.7043 L380.149475,6407.14215 C380.464211,6407.45661 380.241398,6408.00167 379.79677,6408.00167 L365.016149,6408.00167 C364.464611,6408.00167 364,6408.44091 364,6408.99195 L364,6408.99594 C364,6409.54699 364.464611,6409.99821 365.016149,6409.99821 L379.79677,6409.99821 C380.241398,6409.99821 380.464211,6410.52829 380.149475,6410.84275 L373.68389,6417.29957 C373.293217,6417.68889 373.293217,6418.3188 373.68389,6418.70913 L373.68389,6418.70813 C374.073563,6419.09746 374.706034,6419.09746 375.096707,6418.70713 L383.41474,6410.39652 L383.41474,6410.39652 C384.195087,6409.61687 384.195087,6408.35206 383.41474,6407.57241 C383.233892,6407.39272 374.946832,6399.11206 375.127681,6399.29274"
                  />
                </g>
              </g>
            </g>
          </svg>
        </div>
        <article
          className="coinItem"
          data-testid="binance-coin"
        >
          <section
            className="itemSection itemHeader"
          >
            <h3
              className="itemName"
              data-testid="coinName"
            >
              BNB
            </h3>
            <div
              className="iconContainer"
            >
              <img
                alt="BNB"
                className="coinIcon"
                data-testid="coinLogo"
                src="generic-crypto-mock-logo.svg"
              />
            </div>
          </section>
          <section
            className="itemSection"
          >
            <div
              className="itemDescription"
            >
              <h3
                className="itemCategory rankCategory"
              >
                Rank
              </h3>
              <p
                className="itemData rankData"
                data-testid="coinRank"
              >
                4
              </p>
            </div>
            <div
              className="itemDescription"
            >
              <h4
                className="itemCategory"
              >
                Symbol
              </h4>
              <p
                className="itemData"
                data-testid="coinSymbol"
              >
                BNB
              </p>
            </div>
          </section>
        </article>
      </a>
      <a
        className="coinLink evenCoin"
        href="/coins/usd-coin"
        onClick={[Function]}
      >
        <div
          className="appIcon moreIcon"
          data-testid="moreIcon"
        >
          <svg
            height="1em"
            version="1.1"
            viewBox="0 0 20 20"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <title>
              more-icon
            </title>
            <defs />
            <g
              fill="none"
              fillRule="evenodd"
              id="Page-1"
              stroke="none"
              strokeWidth="1"
            >
              <g
                fill="currentColor"
                transform="translate(-420.000000, -6559.000000)"
              >
                <g
                  transform="translate(56.000000, 160.000000)"
                >
                  <path
                    d="M375.127681,6399.29274 C374.737008,6398.90242 374.104537,6398.90242 373.714864,6399.29274 C373.324191,6399.68307 373.324191,6400.31497 373.714864,6400.7043 L380.149475,6407.14215 C380.464211,6407.45661 380.241398,6408.00167 379.79677,6408.00167 L365.016149,6408.00167 C364.464611,6408.00167 364,6408.44091 364,6408.99195 L364,6408.99594 C364,6409.54699 364.464611,6409.99821 365.016149,6409.99821 L379.79677,6409.99821 C380.241398,6409.99821 380.464211,6410.52829 380.149475,6410.84275 L373.68389,6417.29957 C373.293217,6417.68889 373.293217,6418.3188 373.68389,6418.70913 L373.68389,6418.70813 C374.073563,6419.09746 374.706034,6419.09746 375.096707,6418.70713 L383.41474,6410.39652 L383.41474,6410.39652 C384.195087,6409.61687 384.195087,6408.35206 383.41474,6407.57241 C383.233892,6407.39272 374.946832,6399.11206 375.127681,6399.29274"
                  />
                </g>
              </g>
            </g>
          </svg>
        </div>
        <article
          className="coinItem"
          data-testid="usd-coin"
        >
          <section
            className="itemSection itemHeader"
          >
            <h3
              className="itemName"
              data-testid="coinName"
            >
              USD Coin
            </h3>
            <div
              className="iconContainer"
            >
              <img
                alt="USD Coin"
                className="coinIcon"
                data-testid="coinLogo"
                src="generic-crypto-mock-logo.svg"
              />
            </div>
          </section>
          <section
            className="itemSection"
          >
            <div
              className="itemDescription"
            >
              <h3
                className="itemCategory rankCategory"
              >
                Rank
              </h3>
              <p
                className="itemData rankData"
                data-testid="coinRank"
              >
                5
              </p>
            </div>
            <div
              className="itemDescription"
            >
              <h4
                className="itemCategory"
              >
                Symbol
              </h4>
              <p
                className="itemData"
                data-testid="coinSymbol"
              >
                USDC
              </p>
            </div>
          </section>
        </article>
      </a>
    </section>
  </div>,
]
`;

exports[`FULL App unit test at homepage, when click on start button successful snapshot test 1`] = `
Array [
  <header>
    <nav>
      <a
        className="fsControls navLink"
        href="/"
        onClick={[Function]}
      >
        <div
          className="appIcon homeIcon"
          data-testid="homeIcon"
        >
          <svg
            fill="currentColor"
            height="1em"
            stroke="currentColor"
            strokeWidth="0"
            viewBox="0 0 24 24"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <title>
              home-icon
            </title>
            <g>
              <path
                d="M0 0h24v24H0z"
                fill="none"
              />
              <path
                d="M19 21H5a1 1 0 0 1-1-1v-9H1l10.327-9.388a1 1 0 0 1 1.346 0L23 11h-3v9a1 1 0 0 1-1 1zM6 19h12V9.157l-6-5.454-6 5.454V19zm2-4h8v2H8v-2z"
              />
            </g>
          </svg>
        </div>
        <span
          className="fsControls navName"
        >
          Home
        </span>
      </a>
      <a
        aria-current="page"
        className="fsControls navLink active"
        href="/coins"
        id="cancel-filter"
        onClick={[Function]}
      >
        <div
          className="appIcon CoinsIcon"
          data-testid="CoinsIcon"
        >
          <svg
            fill="currentColor"
            height="1em"
            stroke="currentColor"
            strokeWidth="0"
            viewBox="0 0 512 512"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <title>
              coins-icon
            </title>
            <path
              d="M0 405.3V448c0 35.3 86 64 192 64s192-28.7 192-64v-42.7C342.7 434.4 267.2 448 192 448S41.3 434.4 0 405.3zM320 128c106 0 192-28.7 192-64S426 0 320 0 128 28.7 128 64s86 64 192 64zM0 300.4V352c0 35.3 86 64 192 64s192-28.7 192-64v-51.6c-41.3 34-116.9 51.6-192 51.6S41.3 334.4 0 300.4zm416 11c57.3-11.1 96-31.7 96-55.4v-42.7c-23.2 16.4-57.3 27.6-96 34.5v63.6zM192 160C86 160 0 195.8 0 240s86 80 192 80 192-35.8 192-80-86-80-192-80zm219.3 56.3c60-10.8 100.7-32 100.7-56.3v-42.7c-35.5 25.1-96.5 38.6-160.7 41.8 29.5 14.3 51.2 33.5 60 57.2z"
            />
          </svg>
        </div>
        <span
          className="fsControls navName"
        >
          Coins
        </span>
      </a>
    </nav>
    <form
      id="filter"
      onSubmit={[Function]}
    >
      <input
        id="field"
        onChange={[Function]}
        placeholder="filter by name/symbol"
        type="text"
        value=""
      />
      <button
        className="ctrl-btn filter-btn"
        data-testid="filter-btn"
        id="cancel"
        onClick={[Function]}
        type="button"
      >
        <div
          className="appIcon lensIcon"
          data-testid="lensIcon"
        >
          <svg
            fill="currentColor"
            height="800px"
            id="filter-icon"
            version="1.1"
            viewBox="0 0 32 32"
            width="800px"
            xmlns="http://www.w3.org/2000/svg"
          >
            <title>
              lens-icon
            </title>
            <path
              d="M0 14.048q0 2.848 1.12 5.44t2.976 4.48 4.48 2.976 5.472 1.12q4.064 0 7.52-2.24l5.312 5.312q0.864 0.864 2.112 0.864t2.144-0.864 0.864-2.112-0.864-2.144l-5.312-5.312q2.24-3.456 2.24-7.52 0-2.88-1.12-5.472t-2.976-4.448-4.48-3.008-5.44-1.12q-2.88 0-5.472 1.12t-4.48 3.008-2.976 4.448-1.12 5.472zM4 14.048q0-2.752 1.344-5.056t3.648-3.648 5.056-1.344q2.688 0 5.024 1.344t3.648 3.648 1.344 5.056q0 2.72-1.344 5.024t-3.648 3.648-5.024 1.344q-2.752 0-5.056-1.344t-3.648-3.648-1.344-5.024z"
            />
          </svg>
        </div>
      </button>
    </form>
  </header>,
  <div
    className="wrapper"
  >
    <section
      className="allCoins"
    >
      <a
        className="coinLink evenCoin"
        href="/coins/bitcoin"
        onClick={[Function]}
      >
        <div
          className="appIcon moreIcon"
          data-testid="moreIcon"
        >
          <svg
            height="1em"
            version="1.1"
            viewBox="0 0 20 20"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <title>
              more-icon
            </title>
            <defs />
            <g
              fill="none"
              fillRule="evenodd"
              id="Page-1"
              stroke="none"
              strokeWidth="1"
            >
              <g
                fill="currentColor"
                transform="translate(-420.000000, -6559.000000)"
              >
                <g
                  transform="translate(56.000000, 160.000000)"
                >
                  <path
                    d="M375.127681,6399.29274 C374.737008,6398.90242 374.104537,6398.90242 373.714864,6399.29274 C373.324191,6399.68307 373.324191,6400.31497 373.714864,6400.7043 L380.149475,6407.14215 C380.464211,6407.45661 380.241398,6408.00167 379.79677,6408.00167 L365.016149,6408.00167 C364.464611,6408.00167 364,6408.44091 364,6408.99195 L364,6408.99594 C364,6409.54699 364.464611,6409.99821 365.016149,6409.99821 L379.79677,6409.99821 C380.241398,6409.99821 380.464211,6410.52829 380.149475,6410.84275 L373.68389,6417.29957 C373.293217,6417.68889 373.293217,6418.3188 373.68389,6418.70913 L373.68389,6418.70813 C374.073563,6419.09746 374.706034,6419.09746 375.096707,6418.70713 L383.41474,6410.39652 L383.41474,6410.39652 C384.195087,6409.61687 384.195087,6408.35206 383.41474,6407.57241 C383.233892,6407.39272 374.946832,6399.11206 375.127681,6399.29274"
                  />
                </g>
              </g>
            </g>
          </svg>
        </div>
        <article
          className="coinItem"
          data-testid="bitcoin"
        >
          <section
            className="itemSection itemHeader"
          >
            <h3
              className="itemName"
              data-testid="coinName"
            >
              Bitcoin
            </h3>
            <div
              className="iconContainer"
            >
              <img
                alt="Bitcoin"
                className="coinIcon"
                data-testid="coinLogo"
                src="generic-crypto-mock-logo.svg"
              />
            </div>
          </section>
          <section
            className="itemSection"
          >
            <div
              className="itemDescription"
            >
              <h3
                className="itemCategory rankCategory"
              >
                Rank
              </h3>
              <p
                className="itemData rankData"
                data-testid="coinRank"
              >
                1
              </p>
            </div>
            <div
              className="itemDescription"
            >
              <h4
                className="itemCategory"
              >
                Symbol
              </h4>
              <p
                className="itemData"
                data-testid="coinSymbol"
              >
                BTC
              </p>
            </div>
          </section>
        </article>
      </a>
      <a
        className="coinLink oddCoin"
        href="/coins/ethereum"
        onClick={[Function]}
      >
        <div
          className="appIcon moreIcon"
          data-testid="moreIcon"
        >
          <svg
            height="1em"
            version="1.1"
            viewBox="0 0 20 20"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <title>
              more-icon
            </title>
            <defs />
            <g
              fill="none"
              fillRule="evenodd"
              id="Page-1"
              stroke="none"
              strokeWidth="1"
            >
              <g
                fill="currentColor"
                transform="translate(-420.000000, -6559.000000)"
              >
                <g
                  transform="translate(56.000000, 160.000000)"
                >
                  <path
                    d="M375.127681,6399.29274 C374.737008,6398.90242 374.104537,6398.90242 373.714864,6399.29274 C373.324191,6399.68307 373.324191,6400.31497 373.714864,6400.7043 L380.149475,6407.14215 C380.464211,6407.45661 380.241398,6408.00167 379.79677,6408.00167 L365.016149,6408.00167 C364.464611,6408.00167 364,6408.44091 364,6408.99195 L364,6408.99594 C364,6409.54699 364.464611,6409.99821 365.016149,6409.99821 L379.79677,6409.99821 C380.241398,6409.99821 380.464211,6410.52829 380.149475,6410.84275 L373.68389,6417.29957 C373.293217,6417.68889 373.293217,6418.3188 373.68389,6418.70913 L373.68389,6418.70813 C374.073563,6419.09746 374.706034,6419.09746 375.096707,6418.70713 L383.41474,6410.39652 L383.41474,6410.39652 C384.195087,6409.61687 384.195087,6408.35206 383.41474,6407.57241 C383.233892,6407.39272 374.946832,6399.11206 375.127681,6399.29274"
                  />
                </g>
              </g>
            </g>
          </svg>
        </div>
        <article
          className="coinItem"
          data-testid="ethereum"
        >
          <section
            className="itemSection itemHeader"
          >
            <h3
              className="itemName"
              data-testid="coinName"
            >
              Ethereum
            </h3>
            <div
              className="iconContainer"
            >
              <img
                alt="Ethereum"
                className="coinIcon"
                data-testid="coinLogo"
                src="generic-crypto-mock-logo.svg"
              />
            </div>
          </section>
          <section
            className="itemSection"
          >
            <div
              className="itemDescription"
            >
              <h3
                className="itemCategory rankCategory"
              >
                Rank
              </h3>
              <p
                className="itemData rankData"
                data-testid="coinRank"
              >
                2
              </p>
            </div>
            <div
              className="itemDescription"
            >
              <h4
                className="itemCategory"
              >
                Symbol
              </h4>
              <p
                className="itemData"
                data-testid="coinSymbol"
              >
                ETH
              </p>
            </div>
          </section>
        </article>
      </a>
      <a
        className="coinLink evenCoin"
        href="/coins/tether"
        onClick={[Function]}
      >
        <div
          className="appIcon moreIcon"
          data-testid="moreIcon"
        >
          <svg
            height="1em"
            version="1.1"
            viewBox="0 0 20 20"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <title>
              more-icon
            </title>
            <defs />
            <g
              fill="none"
              fillRule="evenodd"
              id="Page-1"
              stroke="none"
              strokeWidth="1"
            >
              <g
                fill="currentColor"
                transform="translate(-420.000000, -6559.000000)"
              >
                <g
                  transform="translate(56.000000, 160.000000)"
                >
                  <path
                    d="M375.127681,6399.29274 C374.737008,6398.90242 374.104537,6398.90242 373.714864,6399.29274 C373.324191,6399.68307 373.324191,6400.31497 373.714864,6400.7043 L380.149475,6407.14215 C380.464211,6407.45661 380.241398,6408.00167 379.79677,6408.00167 L365.016149,6408.00167 C364.464611,6408.00167 364,6408.44091 364,6408.99195 L364,6408.99594 C364,6409.54699 364.464611,6409.99821 365.016149,6409.99821 L379.79677,6409.99821 C380.241398,6409.99821 380.464211,6410.52829 380.149475,6410.84275 L373.68389,6417.29957 C373.293217,6417.68889 373.293217,6418.3188 373.68389,6418.70913 L373.68389,6418.70813 C374.073563,6419.09746 374.706034,6419.09746 375.096707,6418.70713 L383.41474,6410.39652 L383.41474,6410.39652 C384.195087,6409.61687 384.195087,6408.35206 383.41474,6407.57241 C383.233892,6407.39272 374.946832,6399.11206 375.127681,6399.29274"
                  />
                </g>
              </g>
            </g>
          </svg>
        </div>
        <article
          className="coinItem"
          data-testid="tether"
        >
          <section
            className="itemSection itemHeader"
          >
            <h3
              className="itemName"
              data-testid="coinName"
            >
              Tether
            </h3>
            <div
              className="iconContainer"
            >
              <img
                alt="Tether"
                className="coinIcon"
                data-testid="coinLogo"
                src="generic-crypto-mock-logo.svg"
              />
            </div>
          </section>
          <section
            className="itemSection"
          >
            <div
              className="itemDescription"
            >
              <h3
                className="itemCategory rankCategory"
              >
                Rank
              </h3>
              <p
                className="itemData rankData"
                data-testid="coinRank"
              >
                3
              </p>
            </div>
            <div
              className="itemDescription"
            >
              <h4
                className="itemCategory"
              >
                Symbol
              </h4>
              <p
                className="itemData"
                data-testid="coinSymbol"
              >
                USDT
              </p>
            </div>
          </section>
        </article>
      </a>
      <a
        className="coinLink oddCoin"
        href="/coins/binance-coin"
        onClick={[Function]}
      >
        <div
          className="appIcon moreIcon"
          data-testid="moreIcon"
        >
          <svg
            height="1em"
            version="1.1"
            viewBox="0 0 20 20"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <title>
              more-icon
            </title>
            <defs />
            <g
              fill="none"
              fillRule="evenodd"
              id="Page-1"
              stroke="none"
              strokeWidth="1"
            >
              <g
                fill="currentColor"
                transform="translate(-420.000000, -6559.000000)"
              >
                <g
                  transform="translate(56.000000, 160.000000)"
                >
                  <path
                    d="M375.127681,6399.29274 C374.737008,6398.90242 374.104537,6398.90242 373.714864,6399.29274 C373.324191,6399.68307 373.324191,6400.31497 373.714864,6400.7043 L380.149475,6407.14215 C380.464211,6407.45661 380.241398,6408.00167 379.79677,6408.00167 L365.016149,6408.00167 C364.464611,6408.00167 364,6408.44091 364,6408.99195 L364,6408.99594 C364,6409.54699 364.464611,6409.99821 365.016149,6409.99821 L379.79677,6409.99821 C380.241398,6409.99821 380.464211,6410.52829 380.149475,6410.84275 L373.68389,6417.29957 C373.293217,6417.68889 373.293217,6418.3188 373.68389,6418.70913 L373.68389,6418.70813 C374.073563,6419.09746 374.706034,6419.09746 375.096707,6418.70713 L383.41474,6410.39652 L383.41474,6410.39652 C384.195087,6409.61687 384.195087,6408.35206 383.41474,6407.57241 C383.233892,6407.39272 374.946832,6399.11206 375.127681,6399.29274"
                  />
                </g>
              </g>
            </g>
          </svg>
        </div>
        <article
          className="coinItem"
          data-testid="binance-coin"
        >
          <section
            className="itemSection itemHeader"
          >
            <h3
              className="itemName"
              data-testid="coinName"
            >
              BNB
            </h3>
            <div
              className="iconContainer"
            >
              <img
                alt="BNB"
                className="coinIcon"
                data-testid="coinLogo"
                src="generic-crypto-mock-logo.svg"
              />
            </div>
          </section>
          <section
            className="itemSection"
          >
            <div
              className="itemDescription"
            >
              <h3
                className="itemCategory rankCategory"
              >
                Rank
              </h3>
              <p
                className="itemData rankData"
                data-testid="coinRank"
              >
                4
              </p>
            </div>
            <div
              className="itemDescription"
            >
              <h4
                className="itemCategory"
              >
                Symbol
              </h4>
              <p
                className="itemData"
                data-testid="coinSymbol"
              >
                BNB
              </p>
            </div>
          </section>
        </article>
      </a>
      <a
        className="coinLink evenCoin"
        href="/coins/usd-coin"
        onClick={[Function]}
      >
        <div
          className="appIcon moreIcon"
          data-testid="moreIcon"
        >
          <svg
            height="1em"
            version="1.1"
            viewBox="0 0 20 20"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <title>
              more-icon
            </title>
            <defs />
            <g
              fill="none"
              fillRule="evenodd"
              id="Page-1"
              stroke="none"
              strokeWidth="1"
            >
              <g
                fill="currentColor"
                transform="translate(-420.000000, -6559.000000)"
              >
                <g
                  transform="translate(56.000000, 160.000000)"
                >
                  <path
                    d="M375.127681,6399.29274 C374.737008,6398.90242 374.104537,6398.90242 373.714864,6399.29274 C373.324191,6399.68307 373.324191,6400.31497 373.714864,6400.7043 L380.149475,6407.14215 C380.464211,6407.45661 380.241398,6408.00167 379.79677,6408.00167 L365.016149,6408.00167 C364.464611,6408.00167 364,6408.44091 364,6408.99195 L364,6408.99594 C364,6409.54699 364.464611,6409.99821 365.016149,6409.99821 L379.79677,6409.99821 C380.241398,6409.99821 380.464211,6410.52829 380.149475,6410.84275 L373.68389,6417.29957 C373.293217,6417.68889 373.293217,6418.3188 373.68389,6418.70913 L373.68389,6418.70813 C374.073563,6419.09746 374.706034,6419.09746 375.096707,6418.70713 L383.41474,6410.39652 L383.41474,6410.39652 C384.195087,6409.61687 384.195087,6408.35206 383.41474,6407.57241 C383.233892,6407.39272 374.946832,6399.11206 375.127681,6399.29274"
                  />
                </g>
              </g>
            </g>
          </svg>
        </div>
        <article
          className="coinItem"
          data-testid="usd-coin"
        >
          <section
            className="itemSection itemHeader"
          >
            <h3
              className="itemName"
              data-testid="coinName"
            >
              USD Coin
            </h3>
            <div
              className="iconContainer"
            >
              <img
                alt="USD Coin"
                className="coinIcon"
                data-testid="coinLogo"
                src="generic-crypto-mock-logo.svg"
              />
            </div>
          </section>
          <section
            className="itemSection"
          >
            <div
              className="itemDescription"
            >
              <h3
                className="itemCategory rankCategory"
              >
                Rank
              </h3>
              <p
                className="itemData rankData"
                data-testid="coinRank"
              >
                5
              </p>
            </div>
            <div
              className="itemDescription"
            >
              <h4
                className="itemCategory"
              >
                Symbol
              </h4>
              <p
                className="itemData"
                data-testid="coinSymbol"
              >
                USDC
              </p>
            </div>
          </section>
        </article>
      </a>
    </section>
  </div>,
]
`;

exports[`FULL App unit test back in the coins page, you can filter the results successful snapshot test 1`] = `
Array [
  <header>
    <nav>
      <a
        className="fsControls navLink"
        href="/"
        onClick={[Function]}
      >
        <div
          className="appIcon homeIcon"
          data-testid="homeIcon"
        >
          <svg
            fill="currentColor"
            height="1em"
            stroke="currentColor"
            strokeWidth="0"
            viewBox="0 0 24 24"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <title>
              home-icon
            </title>
            <g>
              <path
                d="M0 0h24v24H0z"
                fill="none"
              />
              <path
                d="M19 21H5a1 1 0 0 1-1-1v-9H1l10.327-9.388a1 1 0 0 1 1.346 0L23 11h-3v9a1 1 0 0 1-1 1zM6 19h12V9.157l-6-5.454-6 5.454V19zm2-4h8v2H8v-2z"
              />
            </g>
          </svg>
        </div>
        <span
          className="fsControls navName"
        >
          Home
        </span>
      </a>
      <a
        aria-current="page"
        className="fsControls navLink active"
        href="/coins"
        id="cancel-filter"
        onClick={[Function]}
      >
        <div
          className="appIcon CoinsIcon"
          data-testid="CoinsIcon"
        >
          <svg
            fill="currentColor"
            height="1em"
            stroke="currentColor"
            strokeWidth="0"
            viewBox="0 0 512 512"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <title>
              coins-icon
            </title>
            <path
              d="M0 405.3V448c0 35.3 86 64 192 64s192-28.7 192-64v-42.7C342.7 434.4 267.2 448 192 448S41.3 434.4 0 405.3zM320 128c106 0 192-28.7 192-64S426 0 320 0 128 28.7 128 64s86 64 192 64zM0 300.4V352c0 35.3 86 64 192 64s192-28.7 192-64v-51.6c-41.3 34-116.9 51.6-192 51.6S41.3 334.4 0 300.4zm416 11c57.3-11.1 96-31.7 96-55.4v-42.7c-23.2 16.4-57.3 27.6-96 34.5v63.6zM192 160C86 160 0 195.8 0 240s86 80 192 80 192-35.8 192-80-86-80-192-80zm219.3 56.3c60-10.8 100.7-32 100.7-56.3v-42.7c-35.5 25.1-96.5 38.6-160.7 41.8 29.5 14.3 51.2 33.5 60 57.2z"
            />
          </svg>
        </div>
        <span
          className="fsControls navName"
        >
          Coins
        </span>
      </a>
    </nav>
    <form
      id="filter"
      onSubmit={[Function]}
    >
      <input
        id="field"
        onChange={[Function]}
        placeholder="filter by name/symbol"
        type="text"
        value="eth"
      />
      <button
        className="ctrl-btn cancel-btn"
        data-testid="cancel-btn"
        id="cancel"
        onClick={[Function]}
        type="button"
      >
        <div
          className="appIcon cancelIcon"
          data-testid="cancelIcon"
        >
          <svg
            fill="currentColor"
            height="1em"
            id="cancel-icon"
            version="1.1"
            viewBox="0 0 512 512"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <title>
              cancel-icon
            </title>
            <g
              transform="translate(91.520000, 91.520000)"
            >
              <polygon
                fill="currentColor"
                points="328.96 30.2933333 298.666667 1.42108547e-14 164.48 134.4 30.2933333 1.42108547e-14 1.42108547e-14 30.2933333 134.4 164.48 1.42108547e-14 298.666667 30.2933333 328.96 164.48 194.56 298.666667 328.96 328.96 298.666667 194.56 164.48"
                strokeLinecap="round"
                strokeLinejoin="round"
                strokeWidth="2"
              />
            </g>
          </svg>
        </div>
      </button>
    </form>
  </header>,
  <div
    className="wrapper"
  >
    <section
      className="allCoins"
    >
      <a
        className="coinLink evenCoin"
        href="/coins/ethereum"
        onClick={[Function]}
      >
        <div
          className="appIcon moreIcon"
          data-testid="moreIcon"
        >
          <svg
            height="1em"
            version="1.1"
            viewBox="0 0 20 20"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <title>
              more-icon
            </title>
            <defs />
            <g
              fill="none"
              fillRule="evenodd"
              id="Page-1"
              stroke="none"
              strokeWidth="1"
            >
              <g
                fill="currentColor"
                transform="translate(-420.000000, -6559.000000)"
              >
                <g
                  transform="translate(56.000000, 160.000000)"
                >
                  <path
                    d="M375.127681,6399.29274 C374.737008,6398.90242 374.104537,6398.90242 373.714864,6399.29274 C373.324191,6399.68307 373.324191,6400.31497 373.714864,6400.7043 L380.149475,6407.14215 C380.464211,6407.45661 380.241398,6408.00167 379.79677,6408.00167 L365.016149,6408.00167 C364.464611,6408.00167 364,6408.44091 364,6408.99195 L364,6408.99594 C364,6409.54699 364.464611,6409.99821 365.016149,6409.99821 L379.79677,6409.99821 C380.241398,6409.99821 380.464211,6410.52829 380.149475,6410.84275 L373.68389,6417.29957 C373.293217,6417.68889 373.293217,6418.3188 373.68389,6418.70913 L373.68389,6418.70813 C374.073563,6419.09746 374.706034,6419.09746 375.096707,6418.70713 L383.41474,6410.39652 L383.41474,6410.39652 C384.195087,6409.61687 384.195087,6408.35206 383.41474,6407.57241 C383.233892,6407.39272 374.946832,6399.11206 375.127681,6399.29274"
                  />
                </g>
              </g>
            </g>
          </svg>
        </div>
        <article
          className="coinItem"
          data-testid="ethereum"
        >
          <section
            className="itemSection itemHeader"
          >
            <h3
              className="itemName"
              data-testid="coinName"
            >
              Ethereum
            </h3>
            <div
              className="iconContainer"
            >
              <img
                alt="Ethereum"
                className="coinIcon"
                data-testid="coinLogo"
                src="generic-crypto-mock-logo.svg"
              />
            </div>
          </section>
          <section
            className="itemSection"
          >
            <div
              className="itemDescription"
            >
              <h3
                className="itemCategory rankCategory"
              >
                Rank
              </h3>
              <p
                className="itemData rankData"
                data-testid="coinRank"
              >
                2
              </p>
            </div>
            <div
              className="itemDescription"
            >
              <h4
                className="itemCategory"
              >
                Symbol
              </h4>
              <p
                className="itemData"
                data-testid="coinSymbol"
              >
                ETH
              </p>
            </div>
          </section>
        </article>
      </a>
      <a
        className="coinLink oddCoin"
        href="/coins/tether"
        onClick={[Function]}
      >
        <div
          className="appIcon moreIcon"
          data-testid="moreIcon"
        >
          <svg
            height="1em"
            version="1.1"
            viewBox="0 0 20 20"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <title>
              more-icon
            </title>
            <defs />
            <g
              fill="none"
              fillRule="evenodd"
              id="Page-1"
              stroke="none"
              strokeWidth="1"
            >
              <g
                fill="currentColor"
                transform="translate(-420.000000, -6559.000000)"
              >
                <g
                  transform="translate(56.000000, 160.000000)"
                >
                  <path
                    d="M375.127681,6399.29274 C374.737008,6398.90242 374.104537,6398.90242 373.714864,6399.29274 C373.324191,6399.68307 373.324191,6400.31497 373.714864,6400.7043 L380.149475,6407.14215 C380.464211,6407.45661 380.241398,6408.00167 379.79677,6408.00167 L365.016149,6408.00167 C364.464611,6408.00167 364,6408.44091 364,6408.99195 L364,6408.99594 C364,6409.54699 364.464611,6409.99821 365.016149,6409.99821 L379.79677,6409.99821 C380.241398,6409.99821 380.464211,6410.52829 380.149475,6410.84275 L373.68389,6417.29957 C373.293217,6417.68889 373.293217,6418.3188 373.68389,6418.70913 L373.68389,6418.70813 C374.073563,6419.09746 374.706034,6419.09746 375.096707,6418.70713 L383.41474,6410.39652 L383.41474,6410.39652 C384.195087,6409.61687 384.195087,6408.35206 383.41474,6407.57241 C383.233892,6407.39272 374.946832,6399.11206 375.127681,6399.29274"
                  />
                </g>
              </g>
            </g>
          </svg>
        </div>
        <article
          className="coinItem"
          data-testid="tether"
        >
          <section
            className="itemSection itemHeader"
          >
            <h3
              className="itemName"
              data-testid="coinName"
            >
              Tether
            </h3>
            <div
              className="iconContainer"
            >
              <img
                alt="Tether"
                className="coinIcon"
                data-testid="coinLogo"
                src="generic-crypto-mock-logo.svg"
              />
            </div>
          </section>
          <section
            className="itemSection"
          >
            <div
              className="itemDescription"
            >
              <h3
                className="itemCategory rankCategory"
              >
                Rank
              </h3>
              <p
                className="itemData rankData"
                data-testid="coinRank"
              >
                3
              </p>
            </div>
            <div
              className="itemDescription"
            >
              <h4
                className="itemCategory"
              >
                Symbol
              </h4>
              <p
                className="itemData"
                data-testid="coinSymbol"
              >
                USDT
              </p>
            </div>
          </section>
        </article>
      </a>
    </section>
  </div>,
]
`;

exports[`FULL App unit test when the app loads, shows the homepage successful snapshot test 1`] = `
<main>
  <section
    className="home"
  >
    <div
      className="wrapper"
    >
      <h1>
        Welcome to CoinStatus
      </h1>
      <div>
        <p>
          Here you will find the most current information about your favorite crypto coin.
        </p>
        <p>
          Press the Start button below to explore the world of cryptocurrencies.
        </p>
      </div>
      <a
        className="fsControls btn btn-home btn-start"
        href="/coins"
        onClick={[Function]}
      >
        Start
      </a>
    </div>
  </section>
</main>
`;
